@@ -162,6 +162,7 @@ typedef struct sbatch_options {
 	char *efname;		/* error file name		*/
 	int get_user_env_time;	/* --get-user-env[=timeout]	*/
 	int get_user_env_mode;	/* --get-user-env=[S|L]         */
+	char *export_env;	/* --export			*/
 	char *wckey;            /* --wckey workload characterization key */
 	char *reservation;      /* --reservation */
  	int ckpt_interval;	/* --checkpoint (int minutes)   */
